fix extra space at bottom of photo previews

--- a/core/dashboardTweaks/preview.css
+++ b/core/dashboardTweaks/preview.css
@@ -33,6 +33,7 @@ margin-top:2px;
 border-radius:6px;
 box-shadow:rgb(0,0,0) 0 0 10px;
 z-index:1338;
+line-height:0;
 }
 
 #MissingE_preview img {
